@@ -1,7 +1,8 @@
 ChangeLog
-lib/WWW/Search/Ebay.pm
-lib/WWW/Search/Ebay/ByEndDate.pm
 MANIFEST
 Makefile.PL
 README
+lib/WWW/Search/Ebay.pm
+lib/WWW/Search/Ebay/ByEndDate.pm
+lib/WWW/Search/Ebay/Mature.pm
 test.pl
