@@ -1,11 +1,11 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME'	=> 'WWW::Search::Ebay',
-              'VERSION' => '2.08',
+              'VERSION' => '2.11',
               'PREREQ_PM' => {
                               # The module's version, not the
                               # distribution's version:
-                              'WWW::Search' => 2.27,
+                              # 'WWW::Search' => 2.27,
                               'WWW::Search::Test' => 2.12,
                              },
              );
